Fix stretched mini scoreboard

--- a/views/css/base.css
+++ b/views/css/base.css
@@ -143,6 +143,7 @@ header svg {
 }
 
 main {
+    align-content: start;
     display: grid;
     flex: 1;
     grid-gap: 1rem;
